# Change Log
[Chili Bullet Weapons](https://iunius118.github.io/ChiliBulletWeapons/).
[Source](https://github.com/Iunius118/ChiliBulletWeapons).

## [Unreleased]
### Removed
- Remove migration of gun upgrade data from deprecated data components.

## [2.0.0-beta.4]
### Added
- Add advancements.

## [2.0.0-beta.3]
### Added
- Add mod data components: `gun_contents`, `fixed` and `dyed_gun_colors`.
- Add item models and textures for dyed chili bullet guns.

### Changed
- Migrate gun upgrade data from deprecated data components to `chilibulletweapons:gun_contents`.
- Note that the above migration will only take place during beta testing.
- Chili bullet gun with `chilibulletweapons:fixed` data component can no longer be upgraded.
- Chili bullet gun with `chilibulletweapons:dyed_gun_colors` data component is now dyed.
- Change item model of chili bullet gun for dyed guns.

### Deprecated
- Deprecate mod data components: `quick_loading`, `piercing` and `multishot`.

## [2.0.0-beta.2]
### Added
- Add critical hit to chili bullet. It has a 10% chance of occurring and dealing 22 damage.

### Changed
- Require CBW Chili Peppers and Foods v1.1.1+.
- Sack of bullet-like chili peppers can now be used to craft chili plant biofuel.
- Guns with custom names will now have reduced chance of durability reduction.

## [2.0.0-beta.1]
### Added
- Add mod data components: `loading`, `quick_loading`, `multishot`, `piercing` and `bayoneted`.
- Add mod item property `gun` for gun models.
- Add machine gun recipe.

### Changed
- Port to 1.21.1.
- NeoForge version - Require NeoForge 21.1.169.
- Forge version - Require Minecraft Forge 52.1.0.
- Fabric version - Require Fabric Loader 0.16.14, Fabric API 0.116.0+1.21.1, and Cloth Config API 15.0.140.
- Require CBW Chili Peppers and Foods 1.0.0.
- Rename `canShotgunMultiHit` to `canMultishotMultiHit` in config.
- Rename shotgun to volley gun.
- Guns now have upgrade values with data components instead of enchantments.