@@ -1,6 +1,5 @@
 package com.github.iunius118.chilibulletweapons.component;
 
-import com.github.iunius118.chilibulletweapons.Constants;
 import net.minecraft.core.component.DataComponentType;
 import net.minecraft.network.codec.ByteBufCodecs;
 import net.minecraft.network.codec.StreamCodec;
@@ -47,32 +46,5 @@ public class ModDataComponents {
     public static final DataComponentType<DyedGunColors> DYED_GUN_COLORS = new DataComponentType.Builder<DyedGunColors>()
             .persistent(DyedGunColors.CODEC)
             .networkSynchronized(DyedGunColors.STREAM_CODEC)
-            .build();
-    /**
-     * This gun can load bullets quickly.
-     * It has a positive integer value representing the number of amount of loading time reduced.
-     */
-    @Deprecated
-    public static final DataComponentType<Integer> QUICK_LOADING = new DataComponentType.Builder<Integer>()
-            .persistent(ExtraCodecs.POSITIVE_INT)
-            .networkSynchronized(ByteBufCodecs.VAR_INT)
-            .build();
-    /**
-     * Bullets shot from this gun can penetrate entities.
-     * It has a positive integer value representing the maximum number of entities that can be penetrated.
-     */
-    @Deprecated
-    public static final DataComponentType<Integer> PIERCING = new DataComponentType.Builder<Integer>()
-            .persistent(ExtraCodecs.intRange(1, Constants.ChiliBulletGun.MAX_PIERCING))
-            .networkSynchronized(ByteBufCodecs.VAR_INT)
-            .build();
-    /**
-     * This gun can shoot multiple bullets at once.
-     * It has an integer value greater than or equal to 2 representing the number of bullets shot at once.
-     */
-    @Deprecated
-    public static final DataComponentType<Integer> MULTISHOT = new DataComponentType.Builder<Integer>()
-            .persistent(ExtraCodecs.intRange(2, Constants.ChiliBulletGun.CAPACITY_MULTISHOT))
-            .networkSynchronized(ByteBufCodecs.VAR_INT)
             .build();
 }
