@@ -70,11 +70,6 @@ public class NeoForgeModRegistries {
         dataComponentTypeRegister.register(Constants.DataComponentTypes.FIXED.getPath(), () -> ModDataComponents.FIXED);
         dataComponentTypeRegister.register(Constants.DataComponentTypes.DYED_GUN_COLORS.getPath(), () -> ModDataComponents.DYED_GUN_COLORS);
 
-        // Deprecated
-        dataComponentTypeRegister.register(Constants.DataComponentTypes.QUICK_LOADING.getPath(), () -> ModDataComponents.QUICK_LOADING);
-        dataComponentTypeRegister.register(Constants.DataComponentTypes.PIERCING.getPath(), () -> ModDataComponents.PIERCING);
-        dataComponentTypeRegister.register(Constants.DataComponentTypes.MULTISHOT.getPath(), () -> ModDataComponents.MULTISHOT);
-
         dataComponentTypeRegister.register(modEventBus);
     }
 
