@@ -5,6 +5,7 @@
 ## [Unreleased]
 ### Removed
 - Remove migration of gun upgrade data from deprecated data components.
+- Remove some mod data components: `quick_loading`, `piercing` and `multishot`.
 
 ## [2.0.0-beta.4]
 ### Added
